# ns2

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md  agent-harness.spec.md  cli-commands.spec.md  data-model.spec.md  gh-132-test-quality-review.md  mvp.plan.md  ns2  ns2.toml  review.md  tools-v1.plan.md
.claude/: settings.json
.claude/hooks/: pre-commit-check.sh  session-start.sh  stop-commit-guard.sh  stop-commit-push.sh
.claude/skills/architecture-review/: SKILL.md
.claude/skills/code-review/: SKILL.md
.claude/skills/mutation-test/: SKILL.md
.claude/skills/ns2/: SKILL.md
.claude/skills/smoke-test/: SKILL.md
.github/workflows/: ci.yml
.ns2/agents/: architecture-reviewer.md  code-review.md  pr-builder.md  product-manager.md  qa-tester.md  smoke-tester.md  spec-editor.md  swe.md  test-quality-reviewer.md
crates/agents/: Cargo.toml
crates/agents/src/: lib.rs
crates/anthropic/: Cargo.toml
crates/anthropic/src/: lib.rs
crates/anthropic/tests/: smoke_test.rs
crates/arch-tests/: Cargo.toml  architecture.spec.md  coverage-ignores.toml
crates/arch-tests/tests/: architecture.rs
crates/cli/: Cargo.toml  cli-architecture.spec.md  cli-commands.spec.md
crates/cli/src/: client.rs  main.rs  render.rs
crates/cli/src/commands/: agent.rs  event.rs  hook.rs  issue.rs  mcp.rs  mod.rs  server.rs  session.rs  spec.rs  worktree.rs
crates/cli/tests/: agent_commands.rs  integration_tests.rs  issue_crud.rs  orphan_recovery.rs  server_lifecycle.rs  server_offline.rs  session_advanced.rs  session_crud.rs  spec_commands.rs  worktree.rs
crates/cli/tests/cli/: agent_commands.rs  issue_crud.rs  orphan_recovery.rs  server_lifecycle.rs  server_offline.rs  session_advanced.rs  session_crud.rs  spec_commands.rs  worktree.rs
crates/cli/tests/common/: mod.rs
crates/db/: Cargo.toml  data-model.spec.md
crates/db/migrations/: 20240101000001_initial.sql  20240101000002_drop_block_type.sql  20260424000001_issues.sql  20260425000001_issue_branch.sql  20260501000001_hooks.sql  20260526000001_waiting_status.sql  20260601000001_remove_completed_session_status.sql  20260601000002_events.sql  20260601000003_event_enabled.sql  20260602000001_events.sql  20260602000001_hooks_event_names.sql  20260602000002_github_issue_mapping.sql
crates/db/src/: lib.rs
crates/events/: Cargo.toml
crates/events/src/: lib.rs
crates/harness/: Cargo.toml  agent-harness.spec.md  agent-sessions.spec.md  harness.spec.md
crates/harness/src/: cwd.rs  history.rs  hooks.rs  lib.rs  loop_.rs  prompt.rs  retry.rs
crates/hooks/: Cargo.toml
crates/hooks/src/: cron.rs  lib.rs  timer.rs
crates/issue-backend/: Cargo.toml
crates/issue-backend/src/: lib.rs
crates/issues/: Cargo.toml
crates/issues/src/: lib.rs
crates/ns2-client/: Cargo.toml
crates/ns2-client/src/: lib.rs
crates/server/: Cargo.toml  server.spec.md
crates/server/src/: harness_spawn.rs  issue-lifecycle.spec.md  lib.rs  session-lifecycle.spec.md  state.rs
crates/server/src/routes/: emit.rs  events_route.rs  github_webhook.rs  hook.rs  issue.rs  mod.rs  named_event.rs  session.rs  webhook.rs
crates/specs/: Cargo.toml
crates/specs/src/: lib.rs
crates/tools/: Cargo.toml
crates/tools/src/: lib.rs
crates/tui/: Cargo.toml
crates/tui/src/: lib.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
crates/workspace/: Cargo.toml
crates/workspace/src/: lib.rs  worktree.rs
product-flows/: 01-hello-world-real.md  01-hello-world-real.spec.md  01-server-lifecycle.md  01-server-lifecycle.spec.md  02-multi-turn-with-tools.md  02-multi-turn-with-tools.spec.md  02-session-create-and-list.md  02-session-create-and-list.spec.md  03-bash-tool.md  03-bash-tool.spec.md  03-hello-world-stub.md  03-issue-lifecycle.md  03-issue-lifecycle.spec.md  04-event-hooks.md  04-hello-world-real.md  04-hello-world-real.spec.md  05-gh107-external-webhook-receiver.md  05-pluggable-issue-backends.md  05-server-not-running-errors.md  05-server-not-running-errors.spec.md  06-read-tool.md  06-read-tool.spec.md  07-multi-tool.md  07-multi-tool.spec.md  08-multi-turn.md  08-multi-turn.spec.md  09-agent-commands.md  09-agent-commands.spec.md  10-spec-new.md  10-spec-new.spec.md  11-spec-sync.md  11-spec-sync.spec.md  12-spec-verify.md  12-spec-verify.spec.md  13-issue-lifecycle.spec.md  14-issue-list-filter.spec.md  15-issue-relationships.spec.md  16-issue-error-cases.spec.md  17-session-wait.spec.md  18-stateless-session-resume.spec.md  (+16 more)
product-flows/fixtures/: codebase-layout.sh  copy-env.sh  create-multi-turn-file.sh  create-read-file.sh  create-swe-agent.sh  fixtures.spec.md  init-git-repo.sh  init.sh  seed-multi-turn.sh  seeded-files.sh  start-server.sh
scripts/: verify.sh
specs/: agent-harness.spec.md  agent-sessions.spec.md  architecture.spec.md  cli-architecture.spec.md  cli-commands.spec.md  data-model.spec.md  harness.spec.md  issue-lifecycle.spec.md  server.spec.md  session-lifecycle.spec.md
specs/cli-commands/: agent.spec.md  event.spec.md  hook.spec.md  issue.spec.md  mcp.spec.md  server.spec.md  session.spec.md  spec.spec.md
