[workspace]
members = [
    "crates/types",
    "crates/db",
    "crates/anthropic",
    "crates/tools",
    "crates/workspace",
    "crates/harness",
    "crates/server",
    "crates/tui",
    "crates/cli",
    "crates/arch-tests",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
async-trait = "0.1"
tracing = "0.1"
