[package]
name = "anthropic"
version = "0.1.0"
edition = "2021"

[dependencies]
types = { path = "../types" }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { workspace = true }
tokio-stream = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = "0.3"
bytes = "1"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
tokio = { workspace = true }
