[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ns2"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", features = ["json", "stream"] }
types = { path = "../types" }
workspace = { path = "../workspace" }
server = { path = "../server" }
anthropic = { path = "../anthropic" }
harness = { path = "../harness" }
tools = { path = "../tools" }
futures = "0.3"
uuid = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
