[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ns2"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", features = ["json", "stream"] }
types = { path = "../types" }
events = { path = "../events" }
workspace = { path = "../workspace" }
agents = { path = "../agents" }
specs = { path = "../specs" }
server = { path = "../server" }
futures = "0.3"
uuid = { workspace = true }
chrono = { workspace = true }

[[test]]
name = "integration"
path = "tests/integration_tests.rs"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
ureq = "2"
