[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
types = { path = "../types" }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "migrate"] }
tokio = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
