[package]
name = "harness"
version = "0.1.0"
edition = "2021"

[dependencies]
types = { path = "../types" }
db = { path = "../db" }
anthropic = { path = "../anthropic" }
tools = { path = "../tools" }
agents = { path = "../agents" }
tokio = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
mockall = "0.12"
