[package]
name = "harness"
version = "0.1.0"
edition = "2021"

[dependencies]
types = { path = "../types" }
db = { path = "../db" }
anthropic = { path = "../anthropic" }
tools = { path = "../tools" }
agents = { path = "../agents" }
workspace = { path = "../workspace" }
tokio = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
regex = "1"

[dev-dependencies]
mockall = "0.12"
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
