[package]
name = "tools"
version = "0.1.0"
edition = "2021"

[dependencies]
types = { path = "../types" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["fs", "process", "time"] }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
